<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA500"
    tools:context="com.example.macas.codemenu.menu_principal"
     >



    <Button

        android:id="@+id/btPedido"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pedidos"

        app:layout_anchorGravity="top|center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/btSair"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCardapio"
        app:layout_constraintVertical_bias="0.042"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"


        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background= "#D3D3D3"

        />

    <Button
        android:id="@+id/btSair"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPagamento"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"

        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background= "#D3D3D3"

   />


    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"

        android:textColor="#000000"
        android:textStyle="bold"

         />


    <Button
        android:id="@+id/btCardapio"

        android:text="@string/cardapio"

        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/btSair"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.725"

        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background= "#D3D3D3" />


    <Button
        android:id="@+id/btPagamento"
        android:layout_width="0dp"
        android:layout_height="72dp"

        android:text="@string/pagamento"


        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPedido"
        app:layout_constraintVertical_bias="0.065"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="1.0"

        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background= "#D3D3D3"/>

</android.support.constraint.ConstraintLayout>
